# qml_qt_cmake_starter

./: CMakeLists.txt
src/app/: CMakeLists.txt  Itemg.qml  back.cpp  back.h  main.cpp  main.qml
